[master] update filehandler, utils and main class